--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,111 +2,61 @@
   padding: 0 2rem;
 }
 
-.main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-}
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+ /**************************
+ Common Css starts from here
+ ***************************/
+ 
+ h1.heading {
+    background: black;
+    color: crimson;
+    text-align: center;
+    padding: 10px;
+    text-transform: uppercase;
 }
 
 .card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  background: #0c0c0c;
+  padding: 20px 10px;
+  width: 50%;
+  margin: 20px auto;
+  font-size: 20px;
+  color: #fff;
+  display: flex;
+  justify-content: space-between;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
+.card p a {
+  padding: 8px 10px;
+  background-color: crimson;
+  color: #fff;
+  border: none;
+  border-radius: 2px;
+  font-size: 17px;
+  cursor: pointer;
+  font-weight: 500;
 }
+
+.card p a:hover {
+  background-color: rgb(156, 8, 38);
+  transition: .3s;
+}
+
+.heading{
+  color: crimson;
+  text-align: center;
+}
+
+
+.singleCard{
+  background: #0e0e0e;
+  color: #fff;
+  padding: 20px 30px;
+  width: 40%;
+  margin: auto;
+  border-radius: 5px;
+}
+
+
 
 @media (max-width: 600px) {
   .grid {
